namespace Engine.Controls
{
    public interface ITrigger
    {
         void CheckTrigger(int input);
    }
}